# video_voice_ai_manager

./: .gitignore  CHANGELOG.md  USAGE_FEEDBACK_2026-04-23.md  USAGE_NOTES_2026-05-28.md  cli.py  config.py  gemini-models.md  pyproject.toml  requirements.txt  setup.py  video-processing.md
core/: correlator.py  dictate.py  screenshot.py  video.py  voice.py
output/: client_feedback.py  formatters.py  json_out.py  markdown.py  srt.py
tasks/: A1_core_modules.md  A2_output_cli.md  A3_web_setup.md  A7_doc_updates.md  A7_live_api_migration.md  launch_all.sh
transcribers/: __init__.py  base.py  gemini.py  openai_api.py  whisper_local.py
vision/: __init__.py  base.py  gemini.py  ollama.py  openai_api.py
web/: server.py
web/templates/: index.html
